# code-challenge-rag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
app/: process_route.py  rag_chain.py  server.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  Chat.tsx
frontend/src/components/: UploadModal.tsx
importer/: load_and_process.py  load_and_process_w_pages.py
sandbox/: ragas_playground.ipynb
source_docs/: A_Allgemeine_Hinweise.txt  A_Bewertungsmatrix.txt  EUBIA.txt
tests/: config.toml  pytest.ini  test_chain.py  test_code_challenge_questions.py
tests/shared/: ragas_sample_test.py
